# cppqttcpclient

./: CMakeLists.txt  CMakeLists.txt.user.aabd25c  CMakeLists.txt.user.cdae865  CMakeLists.txt.user.fb78af7  client.cpp  client.h  dataheader.cpp  dataheader.h  dataheader_copy.cpp  dataheader_copy.h  ltcpclient.cpp  ltcpclient.h  mainwidget.cpp  mainwidget.h  mainwidget.ui  opencvimagelabel.cpp  opencvimagelabel.h  picture.ui  receivethread.cpp  receivethread.h  reqheader.cpp  reqheader.h  request.cpp  request.h  resheader.cpp  resheader.h  response.cpp  response.h  room.ui  roomnamedialog.cpp  roomnamedialog.h  roomnamedialog.ui  wtcpclient.cpp  wtcpclient.h
